# time

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SOUL.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  app_state.c  app_state.h  date_parse.c  date_parse.h  hud.c  hud.h  input.c  input.h  main.c
src/math/: CMakeLists.txt  arc_geometry.c  arc_geometry.h  bezier.c  bezier.h  color.c  color.h  easing.c  easing.h  ecliptic.c  ecliptic.h  equatorial_horizontal.c  equatorial_horizontal.h  julian.c  julian.h  kepler.c  kepler.h  mat4.c  mat4.h  projection.c  projection.h  sacred_geometry.c  sacred_geometry.h  sidereal.c  sidereal.h  spring.c  spring.h  vec3.c  vec3.h  vec_interp.c  vec_interp.h  wheel_layout.c  wheel_layout.h
src/platform/: CMakeLists.txt  storage_bridge.h  storage_bridge_native.c  storage_bridge_wasm.c
src/render/: CMakeLists.txt  aspect_lines.c  aspect_lines.h  atmo_ring.c  atmo_ring.h  billboard.c  billboard.h  billboard_shader.c  billboard_shader.h  birth_sky.c  birth_sky.h  bodygraph_pack.c  bodygraph_pack.h  camera.c  camera.h  camera_motion.c  camera_motion.h  camera_path.c  camera_path.h  camera_scale.c  camera_scale.h  card_pack.c  card_pack.h  catalog_ingest.c  catalog_ingest.h  click_target.c  click_target.h  color_palette.c  color_palette.h  color_theory.c  color_theory.h  concentric_ring.c  concentric_ring.h  constellation.c  constellation.h  constellation_bounds.c  constellation_bounds.h  constellation_label.c  constellation_label.h  convergence_visual.c  (+126 more)
src/render/passes/: aspect_lines_pass.c  aspect_lines_pass.h  bagua_pass.c  bagua_pass.h  bodygraph_pass.c  bodygraph_pass.h  calendar_round_pass.c  calendar_round_pass.h  card_pass.c  card_pass.h  constellation_pass.c  constellation_pass.h  convergence_pass.c  convergence_pass.h  deep_sky_pass.c  deep_sky_pass.h  diamond_room_pass.c  diamond_room_pass.h  diffraction_pass.c  diffraction_pass.h  earth_pass.c  earth_pass.h  gates_mandala_pass.c  gates_mandala_pass.h  heatmap_pass.c  heatmap_pass.h  hexagram_pass.c  hexagram_pass.h  milkyway_pass.c  milkyway_pass.h  moon_pass.c  moon_pass.h  natal_chart_pass.c  natal_chart_pass.h  orbit_trail_pass.c  orbit_trail_pass.h  planet_pass.c  planet_pass.h  post_pass.c  post_pass.h  (+22 more)
src/systems/: CMakeLists.txt
src/systems/astrology/: CMakeLists.txt  aspects.c  aspects.h  astrology_interpret.c  astrology_interpret.h  astrology_today.c  astrology_today.h  dignity.c  dignity.h  houses.c  houses.h  observer.c  observer.h  planetary_hours.c  planetary_hours.h  wheel_layout.c  wheel_layout.h  zodiac.c  zodiac.h
src/systems/astronomy/: CMakeLists.txt  astronomy_interpret.c  astronomy_interpret.h  cosmic_time.c  cosmic_time.h  lunar.c  lunar.h  moon_data.c  moon_data.h  moon_nodes.c  moon_nodes.h  orbit.c  orbit.h  planet_data.c  planet_data.h  planets.c  planets.h  precession.c  precession.h  retrograde.c  retrograde.h  solar_events.c  solar_events.h
src/systems/aztec/: CMakeLists.txt  aztec.c  aztec.h  aztec_interpret.c  aztec_interpret.h
src/systems/bahai/: CMakeLists.txt  bahai.c  bahai.h  bahai_interpret.c  bahai_interpret.h
src/systems/balinese/: CMakeLists.txt  pawukon.c  pawukon.h  pawukon_interpret.c  pawukon_interpret.h
src/systems/buddhist/: CMakeLists.txt  buddhist.c  buddhist.h  buddhist_interpret.c  buddhist_interpret.h  buddhist_today.c  buddhist_today.h  kalpa.c  kalpa.h
src/systems/celtic/: CMakeLists.txt  celtic_interpret.c  celtic_interpret.h  celtic_tree.c  celtic_tree.h  wheel_of_year.c  wheel_of_year.h
src/systems/chakra/: CMakeLists.txt  chakra.c  chakra.h  chakra_interpret.c  chakra_interpret.h
src/systems/chinese/: CMakeLists.txt  chinese.c  chinese.h  chinese_interpret.c  chinese_interpret.h  chinese_today.c  chinese_today.h
src/systems/coptic/: CMakeLists.txt  coptic.c  coptic.h  coptic_interpret.c  coptic_interpret.h
src/systems/earth/: CMakeLists.txt  author_card.c  author_card.h  biorhythm.c  biorhythm.h  birth_entry.c  birth_entry.h  content_curator.c  content_curator.h  daylight.c  daylight.h  diamond_room.c  diamond_room.h  earth_fraction.c  earth_fraction.h  earth_stats.c  earth_stats.h  event_filter.c  event_filter.h  heartbeat_counter.c  heartbeat_counter.h  human_population.c  human_population.h  interest_profile.c  interest_profile.h  local_events.c  local_events.h  location_alerts.c  location_alerts.h  moment_snapshot.c  moment_snapshot.h  neighbor_roulette.c  neighbor_roulette.h  notification_data.c  notification_data.h  onboarding.c  onboarding.h  persona_card.c  persona_card.h  persona_io.c  (+41 more)
src/systems/egyptian/: CMakeLists.txt  egyptian.c  egyptian.h  egyptian_interpret.c  egyptian_interpret.h
src/systems/ethiopian/: CMakeLists.txt  ethiopian.c  ethiopian.h  ethiopian_interpret.c  ethiopian_interpret.h
src/systems/french_republican/: CMakeLists.txt  french_republican.c  french_republican.h  french_republican_interpret.c  french_republican_interpret.h
src/systems/geology/: CMakeLists.txt  climate_history.c  climate_history.h  earth_story.c  earth_story.h  earth_voyage.c  earth_voyage.h  fossil_milestones.c  fossil_milestones.h  fossil_narrative.c  fossil_narrative.h  geo_time.c  geo_time.h  geology_interpret.c  geology_interpret.h  geology_today.c  geology_today.h  radiometric.c  radiometric.h  tectonic.c  tectonic.h  thermo.c  thermo.h
src/systems/gregorian/: CMakeLists.txt  (+6 more)
src/ui/: CMakeLists.txt  a11y_narrative.c  a11y_narrative.h  a11y_score.c  a11y_score.h  accessibility.c  accessibility.h  animation.c  animation.h  astro_fmt.c  astro_fmt.h  astro_summary.c  astro_summary.h  audio_a11y.c  audio_a11y.h  audio_culture.c  audio_culture.h  audio_engine.c  audio_engine.h  audio_event.c  audio_event.h  audio_focus_timbre.c  audio_focus_timbre.h  audio_meditation.c  audio_meditation.h  audio_queue.c  audio_queue.h  audio_score.c  audio_score.h  audio_vis_data.c  audio_vis_data.h  auto_theme.c  auto_theme.h  bagua_layout.c  bagua_layout.h  birth_flight.c  birth_flight.h  bodygraph_chart_layout.c  bodygraph_chart_layout.h  card_data.c  (+275 more)
(+1021 files in other folders)
